# stock-optimizer

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml  debug-secrets.yml
config/: settings.example.yaml  targets.example.yaml
src/portfolio_optimizer/: __init__.py  backtest.py  cli.py  db.py  drift.py  flex.py  models.py  optimizer.py  prices.py  rebalance.py  recommend.py  report.py  tax.py
tests/: test_flex_and_report.py  test_optimizer_rebalance.py  test_tax.py
tests/fixtures/: sample_flex.xml
