[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Tax-aware daily portfolio analysis for IBKR (US citizen resident in Spain)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "yfinance>=0.2",
    "scikit-learn>=1.4",
    "skfolio>=0.5",
    "cvxpy>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
portfolio-optimizer = "portfolio_optimizer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
